buildscript {	//쿼리DSL  추가
	ext {
		queryDslVersion = '5.0.0'
	}
}

plugins {
	id 'java'
	id 'war'
	id 'org.springframework.boot' version '2.7.17'
	id 'io.spring.dependency-management' version '1.0.15.RELEASE'
	
	//쿼리DSL  추가
	id "com.ewerk.gradle.plugins.querydsl" version "1.0.10"
	
}

group = 'com.kosta'
version = '0.0.1-SNAPSHOT'

java {
	sourceCompatibility = '11'
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-data-jdbc'
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	compileOnly 'org.projectlombok:lombok'
	developmentOnly 'org.springframework.boot:spring-boot-devtools'
	runtimeOnly 'org.mariadb.jdbc:mariadb-java-client'
	annotationProcessor 'org.projectlombok:lombok'
	providedRuntime 'org.springframework.boot:spring-boot-starter-tomcat'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'org.springframework.security:spring-security-test'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
	
	//Google Firebase Admin
	implementation 'com.google.firebase:firebase-admin:9.2.0'
	
	//modelmapper
	implementation 'org.modelmapper:modelmapper:2.4.4'
	
	// oauth2-client
	implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
	
	// java-jwt
	implementation 'com.auth0:java-jwt:3.19.2'
	
	// JavaMailSender
	implementation 'org.springframework.boot:spring-boot-starter-mail'
	
	// SMS
	implementation 'net.nurigo:sdk:4.2.7'
	
	//쿼리DSL  추가
	implementation "com.querydsl:querydsl-jpa:${queryDslVersion}"
	implementation "com.querydsl:querydsl-apt:${queryDslVersion}"
	annotationProcessor 'jakarta.annotation:jakarta.annotation-api'
	annotationProcessor 'jakarta.persistence:jakarta.persistence-api'
}

tasks.named('bootBuildImage') {
	builder = 'paketobuildpacks/builder-jammy-base:latest'
}

tasks.named('test') {
	useJUnitPlatform()
}

//쿼리DSL 추가 빌드시작
def querydslDir = '$buildDir/generated/querydsl'
querydsl {
	jpa = true
	querydslSourcesDir = querydslDir
}

sourceSets {
	main.java.srcDir querydslDir
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
	querydsl.extendsFrom compileClasspath
}

compileQuerydsl {
	options.annotationProcessorPath = configurations.querydsl
}

//build 다시할경우 필요 
compileQuerydsl.doFirst {
	if(file(querydslDir).exists() )
		delete(file(querydslDir))
}
//쿼리DSL 추가 빌드끝